--- a/docs/main.css
+++ b/docs/main.css
@@ -1,10 +1,10 @@
 #app {
-  width: 450px;
   height: 680px;
+  max-width: 450px;
 }
 
 .dropBox {
-  width: 400px;
+  width: 95%;
   height: 400px;
   border-radius: 5px;
   border: 1px solid;
@@ -21,6 +21,6 @@
 }
 
 .boxed {
-  width: 400px;
+  width: 95%;
   margin: 10px;
 }
